mailsenderror/solution/3prometheus_netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-ingress
  namespace: ecosystem
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus
      #k8s.cloudogu.com/component.name=k8s-prometheus app.kubernetes.io/instance=k8s-prometheus
  ingress:
  - {}
