mailsenderror/solution/allow-mailpit-from-postfix-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-mailpit-from-postfix-ingress
  namespace: ecosystem
spec:
  podSelector:
    matchLabels:
      app: mailpit # Targets your Mailpit pod
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ecosystem
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: postfix
              app.kubernetes.io/name: postfix
              k8s.cloudogu.com/component.name: postfix
      ports:
        - protocol: TCP
          port: 8025
        - protocol: TCP
          port: 1025
